--- a/horadodia.html
+++ b/horadodia.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Exercício 01</title>
+	<title>Hora do Dia</title>
 	<link rel="stylesheet" href="horadodia.css">
 </head>
 <body onload='carregar()'>
